2010-05-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `sl_proccall' for `spr'.

	* tools/lib/t-spr/include/sl_support: Implement `sl_proccall'
	here, since it needs to be expanded before CM4 runs and replaces
	braces by sl_lbr/sl_rbr.

2010-05-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor cleanups.

	* tools/bin/slt.in: Also replace `+' by `_' when generating test 
	output directory names.

	* tools/include/slc.m4: Remove support for `sl_begin_header' and
	`sl_end_header', which are now long obsolete.

2010-05-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Integrate `spr' and `slc' some more.

	* tools/bin/cce.in: Remove `utc' and `utc0' from the
	documentation, since they are not really usable. Add support for
	`spr' targets.

	* tools/bin/slc.in: Remove `-fwesley', obsolete since the `ppp'
	target disappeared. New `-fdump-spr-XXX' argument. Remove references
	to `-fcm4' in the documentation, since they are not really usable and
	will disappear soon.	

2010-05-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Integrate all `spr' processes into a unique front-end.

	* tools/lib/slc/front/__init__.py,
	* tools/lib/slc/front/dump.py,
	* tools/lib/slc/front/opts.py: New.

	* tools/bin/spr: Move `Dispatcher' to...
	* tools/lib/slc/visitors.py: ...here.

	* tools/bin/spr: Move visitor chain definition to...
	* tools/lib/slc/front/chains.py: ...here. Define multiple chains.

	* tools/bin/spr: Move front-end main body to...
	* tools/lib/slc/front/main.py: ...here. Move the initial evaluation to...
	* tools/lib/slc/input/parse.py: ...here.

	* tools/lib/slc/input/cm4.py: Define configuration arguments and
	main process.
	* tools/lib/slc/front/main.py: Use it.

	* tools/lib/slc/front/main.py: Move the test for check errors to...
	* tools/lib/slc/input/check.py (CheckVisitor.visit_program): ...here.

	* tools/lib/slc/lower/flavorseta.py: New visitor `LinkSetA' to link
	`SetA' instances to the corresponding `LowCreate'. This is needed when
	`split' is not used.